# OS_EX3

./: CMakeLists.txt  MapReduceClient.h  MapReduceFramework.cpp  MapReduceFramework.h  SampleClient.cpp
Barrier/: barrierdemo.cpp
